// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectField> tests <SelectField> - multiple value rendering 1`] = `
"<FormGroup
      fieldId={'id'}
      label={'OtherPositions'}
      isRequired={true}
    ><Select
      id={'id'}
      name={'otherPositions'}
      variant={SelectVariant.typeaheadMulti}
      isDisabled={false}
      placeholderText={''}
      isOpen={otherPositions__expanded}
      selections={otherPositions}
      onToggle={(isOpen) => set__otherPositions__expanded(isOpen)}
      onSelect={(event, value, isPlaceHolder) => {
        if (isPlaceHolder) {
          set__otherPositions([]);
        } else {
          set__otherPositions(prev => {
            const selectedValue = value.toString ? value.toString() : value as string;
            if (prev.indexOf(selectedValue) != -1) {
              return prev.filter((s) => s !== selectedValue);
            }
            return [selectedValue, ...prev];
          });
        }
      }}
      value={otherPositions}
    >
      <SelectOption key={'Developer'} value={'Developer'}>Developer</SelectOption>
<SelectOption key={'HR'} value={'HR'}>HR</SelectOption>
<SelectOption key={'UX'} value={'UX'}>UX</SelectOption>
    </Select></FormGroup>"
`;

exports[`<SelectField> tests <SelectField> - single value rendering 1`] = `
"<FormGroup
      fieldId={'id'}
      label={'Role'}
      isRequired={true}
    ><Select
      id={'id'}
      name={'role'}
      variant={SelectVariant.single}
      isDisabled={false}
      placeholderText={''}
      isOpen={role__expanded}
      selections={role}
      onToggle={(isOpen) => set__role__expanded(isOpen)}
      onSelect={(event, value, isPlaceHolder) => {
        if (isPlaceHolder) {
          set__role('');
          set__role__expanded(false);
        } else {
          const parsedSelection = value.toString ? value.toString() : value as string;
          set__role(parsedSelection || '');
          set__role__expanded(false);
        }
      }}
      value={role}
    >
      <SelectOption key={'Developer'} value={'Developer'}>Developer</SelectOption>
<SelectOption key={'HR'} value={'HR'}>HR</SelectOption>
<SelectOption key={'UX'} value={'UX'}>UX</SelectOption>
    </Select></FormGroup>"
`;
